--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.19.2",
     "ethers": "^4.0.47",
     "react": "^16.13.1",
+    "react-animated-burgers": "^1.2.7",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
