--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "body-scroll-lock": "^3.0.3",
     "ethers": "^4.0.47",
     "react": "^16.13.1",
     "react-animated-burgers": "^1.2.7",
