Adds yaml loader and updates faq page

--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -88,7 +88,7 @@
     ]
   },
   "devDependencies": {
-    "yaml-loader": "^0.6.0"
+    "js-yaml-loader": "^1.2.2"
   },
   "jest": {
     "roots": [
