--- a/packages/optimism.io/src/pages/FAQ/faqData.yaml
+++ b/packages/optimism.io/src/pages/FAQ/faqData.yaml
@@ -1,24 +1,24 @@
-- question: lorem Pariatur in reprehenderit culpa deserunt.
+- question: Why Optimism?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
     adipisicing nisi tempor. Aliquip sit sunt et deserunt aliquip laborum.
-- question: lorem Pariatur in reprehenderit culpa deserunt.
+- question: What if I'm pessimistic?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
     adipisicing nisi tempor. Aliquip sit sunt et deserunt aliquip laborum.
-- question: lorem Pariatur in reprehenderit culpa deserunt.
+- question: How soon is now?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
     adipisicing nisi tempor. Aliquip sit sunt et deserunt aliquip laborum.
-- question: lorem Pariatur in reprehenderit culpa deserunt.
+- question: Is this real life?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
     adipisicing nisi tempor. Aliquip sit sunt et deserunt aliquip laborum.
-- question: lorem Pariatur in reprehenderit culpa deserunt.
+- question: Is the cat alive or dead?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
