--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -40,6 +40,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -55,7 +56,7 @@
     "react-router-dom": "^5.1.2",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
+    "sass-loader": "^10.1.0",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
     "styled-components": "^5.1.1",
