FAQ page, mobile menu, Philosophy page

--- a/packages/optimism.io/src/pages/FAQ/faqData.yaml
+++ b/packages/optimism.io/src/pages/FAQ/faqData.yaml
@@ -1,24 +1,24 @@
-- question: Why Optimism?
+- question: Who?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
     adipisicing nisi tempor. Aliquip sit sunt et deserunt aliquip laborum.
-- question: What if I'm pessimistic?
+- question: What?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
     adipisicing nisi tempor. Aliquip sit sunt et deserunt aliquip laborum.
-- question: How soon is now?
+- question: When?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
     adipisicing nisi tempor. Aliquip sit sunt et deserunt aliquip laborum.
-- question: Is this real life?
+- question: Where?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
     adipisicing nisi tempor. Aliquip sit sunt et deserunt aliquip laborum.
-- question: Is the cat alive or dead?
+- question: Why?
   answer:
     Magna ipsum eiusmod dolore occaecat laboris. Qui tempor ullamco cupidatat nisi non deserunt. Aliquip velit pariatur
     duis tempor pariatur culpa. Commodo adipisicing elit Lorem aute reprehenderit irure commodo deserunt in culpa
