--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@chakra-ui/react": "^1.0.1",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -32,6 +35,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "ethers": "^4.0.47",
     "file-loader": "4.3.0",
+    "framer-motion": "^2.9.5",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
