--- a/packages/optimism.io/src/pages/Demos/demos.yaml
+++ b/packages/optimism.io/src/pages/Demos/demos.yaml
@@ -16,6 +16,9 @@
     authorTitle: Synthetix CTO
     imageUrl: images/justin-moses.png
   screenCap: images/synthetix-screencap.png
+  gasDecrease: 143x
+  gasCost: 3.3k GAS
+  confTime: 0.3s
 
 - name: Uniswap
   title: Unipig Exchange
@@ -34,3 +37,5 @@
     authorTitle: Uniswap Founder & CEO
     imageUrl: images/hayden-adams.jpg
   screenCap: images/unipig-screencap.png
+  gasDecrease: 10-100x
+  confTime: 169ms
