--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ethereum-optimism.github.io/homepage",
   "dependencies": {
     "@babel/core": "7.9.0",
     "@chakra-ui/icons": "^1.0.1",
@@ -38,6 +39,7 @@
     "file-loader": "4.3.0",
     "framer-motion": "^2.9.5",
     "fs-extra": "^8.1.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -77,7 +79,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "deploy": "yarn build && surge build optimism-staging.surge.sh"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
