--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -2,7 +2,6 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ethereum-optimism.github.io",
   "dependencies": {
     "@babel/core": "7.9.0",
     "@chakra-ui/icons": "^1.0.1",
@@ -78,8 +77,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "deploy": "gh-pages -d build"
+    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
