--- a/packages/ovm-subgraphs/optimism-l1-subgraph/subgraph.TEMPLATE.yaml
+++ b/packages/ovm-subgraphs/optimism-l1-subgraph/subgraph.TEMPLATE.yaml
@@ -6,9 +6,9 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: OVM_CrossDomainMessenger
-    network: mainnet
+    network: {{networkName}}
     source:
-      address: "0xfBE93ba0a2Df92A8e8D40cE00acCF9248a6Fc812"
+      address: "{{contracts.ovmCrossDomainMessenger.address}}"
       abi: OVM_CrossDomainMessenger
       startBlock: 11657097
     mapping:
@@ -28,9 +28,9 @@ dataSources:
       file: ./src/mapping.ts
   - kind: ethereum/contract
     name: OVM_L1ETHGateway
-    network: mainnet
+    network: {{networkName}}
     source:
-      address: "0x0000000000000000000000000000000000000000"
+      address: "{{contracts.ovmL1EthGateway.address}}"
       abi: OVM_L1ETHGateway
       startBlock: 11657097
     mapping:
@@ -48,9 +48,9 @@ dataSources:
       file: ./src/mapping.ts
   - kind: ethereum/contract
     name: SynthetixBridgeToOptimism
-    network: mainnet
+    network: {{networkName}}
     source:
-      address: "0x045e507925d2e05D114534D0810a1abD94aca8d6"
+      address: "{{contracts.snxBridgeToOptimism.address}}"
       abi: SynthetixBridgeToOptimism
       startBlock: 11657097
     mapping:
