--- a/packages/ovm-subgraphs/package.json
+++ b/packages/ovm-subgraphs/package.json
@@ -2,12 +2,21 @@
   "name": "@project/l2-subgraph",
   "version": "0.1.0",
   "scripts": {
-    "create": "graph create ethereum-optimism/optimism-l2-gateway --node https://api.thegraph.com/deploy/",
-    "create-local": "graph create ethereum-optimism/optimism-l2-gateway --node http://127.0.0.1:8020",
-    "codegen": "graph codegen",
-    "build": "graph build",
+    "prep:kovan": "npm run prep:kovan:l1 && npm run prep:kovan:l2",
+    "prep:kovan:l1": "NETWORK_NAME=kovan DIR_NAME=optimism-l1-subgraph node ./templatify.js",
+    "prep:kovan:l2": "NETWORK_NAME=kovan DIR_NAME=optimism-l2-subgraph node ./templatify.js",
+    "prep:mainnet": "npm run prep:mainnet:l1 && npm run prep:mainnet:l2",
+    "prep:mainnet:l1": "NETWORK_NAME=mainnet DIR_NAME=optimism-l1-subgraph node ./templatify.js",
+    "prep:mainnet:l2": "NETWORK_NAME=mainnet DIR_NAME=optimism-l2-subgraph node ./templatify.js",
+    "codegen": "npm run codegen:l1 && npm run codegen:l2",
+    "codegen:l1": "cd optimism-l1-subgraph && graph codegen",
+    "codegen:l2": "cd optimism-l2-subgraph && graph codegen",
+    "build": "yarn build:l1 && yarn build:l2",
+    "build:l1": "cd optimism-l1-subgraph && graph build",
+    "build:l2": "cd optimism-l2-subgraph && graph build",
     "deploy": "graph deploy --access-token 58bbc53b59b44369912d6fed2d6a672f --node https://api.staging.thegraph.com/deploy/ --ipfs https://api.staging.thegraph.com/ipfs/ gigamesh/ovm-token-transfers subgraph.yaml",
-    "deploy-local": "graph deploy ethereum-optimism/optimism-l2-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
+    "deploy-local:l1": "graph deploy ethereum-optimism/optimism-l1-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "deploy-local:l2": "graph deploy ethereum-optimism/optimism-l2-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.19.0",
@@ -16,8 +25,12 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
+    "fs-extra": "^9.1.0",
+    "handlebars": "^4.7.7",
+    "js-yaml": "^4.0.0",
     "truffle": "^5.0.4",
     "truffle-contract": "^4.0.5",
-    "truffle-hdwallet-provider": "^1.0.4"
+    "truffle-hdwallet-provider": "^1.0.4",
+    "typy": "^3.3.0"
   }
 }
