--- a/packages/ovm-subgraphs/package.json
+++ b/packages/ovm-subgraphs/package.json
@@ -4,17 +4,19 @@
   "scripts": {
     "prep:kovan": "npm run prep:kovan:l1 && npm run prep:kovan:l2",
     "prep:kovan:l1": "NETWORK_NAME=kovan DIR_NAME=optimism-l1-subgraph node ./templatify.js",
-    "prep:kovan:l2": "NETWORK_NAME=kovan DIR_NAME=optimism-l2-subgraph node ./templatify.js",
+    "prep:kovan:l2": "NETWORK_NAME=kovan-optimism DIR_NAME=optimism-l2-subgraph node ./templatify.js",
     "prep:mainnet": "npm run prep:mainnet:l1 && npm run prep:mainnet:l2",
     "prep:mainnet:l1": "NETWORK_NAME=mainnet DIR_NAME=optimism-l1-subgraph node ./templatify.js",
-    "prep:mainnet:l2": "NETWORK_NAME=mainnet DIR_NAME=optimism-l2-subgraph node ./templatify.js",
+    "prep:mainnet:l2": "NETWORK_NAME=optimism DIR_NAME=optimism-l2-subgraph node ./templatify.js",
     "codegen": "npm run codegen:l1 && npm run codegen:l2",
     "codegen:l1": "cd optimism-l1-subgraph && graph codegen",
     "codegen:l2": "cd optimism-l2-subgraph && graph codegen",
-    "build": "yarn build:l1 && yarn build:l2",
+    "build": "npm run build:l1 && npm run build:l2",
     "build:l1": "cd optimism-l1-subgraph && graph build",
     "build:l2": "cd optimism-l2-subgraph && graph build",
-    "deploy": "graph deploy --access-token 58bbc53b59b44369912d6fed2d6a672f --node https://api.staging.thegraph.com/deploy/ --ipfs https://api.staging.thegraph.com/ipfs/ gigamesh/ovm-token-transfers subgraph.yaml",
+    "deploy": "npm run deploy:l1 && npm run deploy:l2",
+    "deploy:l1": "cd optimism-l1-subgraph && graph deploy --access-token 58bbc53b59b44369912d6fed2d6a672f --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ ethereum-optimism/optimism-l1-subgraph subgraph.yaml && cd ..",
+    "deploy:l2": "cd optimism-l2-subgraph && graph deploy --access-token 58bbc53b59b44369912d6fed2d6a672f --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ ethereum-optimism/optimism-l2-subgraph subgraph.yaml && cd ..",
     "deploy-local:l1": "graph deploy ethereum-optimism/optimism-l1-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
     "deploy-local:l2": "graph deploy ethereum-optimism/optimism-l2-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
