--- a/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.yaml
+++ b/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.yaml
@@ -6,9 +6,9 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: OVM_CrossDomainMessenger
-    network: mainnet
+    network: optimism
     source:
-      address: "0xfBE93ba0a2Df92A8e8D40cE00acCF9248a6Fc812"
+      address: "0x4200000000000000000000000000000000000007"
       abi: OVM_CrossDomainMessenger
     mapping:
       kind: ethereum/events
@@ -27,9 +27,9 @@ dataSources:
       file: ./src/mapping.ts
   - kind: ethereum/contract
     name: SynthetixBridgeToBase
-    network: mainnet
+    network: optimism
     source:
-      address: ""
+      address: "0x4D7186818daBFe88bD80421656BbD07Dffc979Cc"
       abi: SynthetixBridgeToBase
     mapping:
       kind: ethereum/events
