--- a/packages/ovm-subgraphs/package.json
+++ b/packages/ovm-subgraphs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@project/l2-subgraph",
+  "name": "@project/ovm-subgraphs",
   "version": "0.1.0",
   "scripts": {
     "prep:kovan": "npm run prep:kovan:l1 && npm run prep:kovan:l2",
