--- a/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.TEMPLATE.yaml
+++ b/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.TEMPLATE.yaml
@@ -10,6 +10,7 @@ dataSources:
     source:
       address: "{{contracts.ovmCrossDomainMessenger.address}}"
       abi: OVM_CrossDomainMessenger
+      startBlock: {{startBlock}}      
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -31,6 +32,7 @@ dataSources:
     source:
       address: "{{contracts.snxBridgeToBase.address}}"
       abi: SynthetixBridgeToBase
+      startBlock: {{startBlock}}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
