--- a/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.yaml
+++ b/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.yaml
@@ -10,6 +10,7 @@ dataSources:
     source:
       address: "0x4200000000000000000000000000000000000007"
       abi: OVM_CrossDomainMessenger
+      startBlock: 0      
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -31,6 +32,7 @@ dataSources:
     source:
       address: "0xC2E4aB21D4d68B82bA71C2Fb449EC8aACc86133A"
       abi: SynthetixBridgeToBase
+      startBlock: 0
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
