--- a/packages/ovm-subgraphs/package.json
+++ b/packages/ovm-subgraphs/package.json
@@ -20,8 +20,8 @@
     "deploy:kovan": "npm run deploy:kovan:l1 && npm run deploy:kovan:l2",
     "deploy:kovan:l1": "dotenv -e .env -- cross-var \"cd optimism-l1-subgraph && graph deploy --access-token %THE_GRAPH_API_KEY% --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ ethereum-optimism-2/optimism-l1-kovan subgraph.yaml && cd ..\"",
     "deploy:kovan:l2": "dotenv -e .env -- cross-var \"cd optimism-l2-subgraph && graph deploy --access-token %THE_GRAPH_API_KEY% --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ ethereum-optimism-2/optimism-l2-kovan subgraph.yaml && cd ..\"",
-    "deploy-local:l1": "graph deploy ethereum-optimism-2/optimism-l1-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
-    "deploy-local:l2": "graph deploy ethereum-optimism-2/optimism-l2-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
+    "deploy-local:l1": "cd optimism-l1-subgraph && graph deploy ethereum-optimism-2/optimism-l1-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "deploy-local:l2": "cd optimism-l2-subgraph && graph deploy ethereum-optimism-2/optimism-l2-gateway --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.19.0",
@@ -33,6 +33,7 @@
     "cross-var": "^1.1.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
+    "ethers": "^5.0.32",
     "fs-extra": "^9.1.0",
     "handlebars": "^4.7.7",
     "js-yaml": "^4.0.0",
