--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
     ]
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "packages": "^0.0.8"
+  },
+  "resolutions": {
+    "**/@typescript-eslint/eslint-plugin": "^4.18.0",
+    "**/@typescript-eslint/parser": "^4.18.0"
   }
 }
