--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -30,7 +30,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@titelmedia/react-apollo-multiple-clients": "^4.0.5",
     "@types/jest": "^26.0.20",
     "@types/luxon": "^1.26.0",
     "@types/node": "^14.14.31",
@@ -43,6 +42,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-utilities": "^1.3.3",
+    "bnc-notify": "^1.5.1",
     "chalk": "^4.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
