--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@project/react-app",
+  "name": "@project/gateway",
   "version": "1.0.0",
   "homepage": "./",
   "browserslist": {
@@ -25,7 +25,6 @@
     "@ethersproject/contracts": "^5.0.5",
     "@ethersproject/providers": "^5.0.12",
     "@metamask/detect-provider": "^1.2.0",
-    "@project/contracts": "^1.0.0",
     "@testing-library/dom": "^6.16.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
