--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -61,7 +61,8 @@
     "styled-components": "^5.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.2.2",
-    "web3modal": "^1.9.1"
+    "web3modal": "^1.9.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "eslintConfig": {
     "extends": "react-app"
