--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
   ],
   "private": true,
   "scripts": {
-    "gateway:build": "yarn workspace @project/gateway build",
-    "gateway:start": "yarn workspace @project/gateway start",
-    "home:build": "yarn workspace @project/optimism.io build",
-    "home:start": "yarn workspace @project/optimism.io start",
-    "status:build": "yarn workspace @project/network-status build",
-    "status:start": "yarn workspace @project/network-status start"
+    "gateway:build": "yarn workspace gateway.optimism.io build",
+    "gateway:start": "yarn workspace gateway.optimism.io start",
+    "home:build": "yarn workspace optimism.io build",
+    "home:start": "yarn workspace optimism.io start",
+    "status:build": "yarn workspace status.optimism.io build",
+    "status:start": "yarn workspace status.optimism.io start"
   },
   "workspaces": {
     "packages": [
       "packages/*"
-    ]
+    ],
+    "nohoist": ["**/react-dom/**", "**/babel-jest","**/react-scripts", "**/react-scripts/**", "**/jest", "**/webpack"]
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
