--- a/packages/gateway.optimism.io/package.json
+++ b/packages/gateway.optimism.io/package.json
@@ -18,7 +18,7 @@
     "@apollo/client": "^3.3.11",
     "@babel/core": "7.9.0",
     "@chakra-ui/icons": "^1.0.3",
-    "@chakra-ui/react": "^1.3.3",
+    "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@eth-optimism/watcher": "^0.0.1-alpha.9",
@@ -28,9 +28,9 @@
     "@metamask/detect-provider": "^1.2.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^6.16.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.20",
     "@types/luxon": "^1.26.0",
     "@types/node": "^14.14.31",
@@ -38,8 +38,8 @@
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.3.1",
     "apollo-boost": "^0.4.9",
@@ -55,7 +55,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chalk": "^4.1.0",
     "css-loader": "3.4.2",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
@@ -65,10 +65,10 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "ethers": "^5.0.31",
+    "ethers": "^5.0.32",
     "file-loader": "4.3.0",
     "framer-motion": "^3.2.1",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.1.0",
     "graphql": "^14.7.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "husky": "^5.1.3",
@@ -88,16 +88,16 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "16.14.0",
+    "react": "^17.0.2",
     "react-animated-burgers": "^1.2.8",
     "react-app-polyfill": "^1.0.6",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dev-utils": "^10.2.1",
-    "react-dom": "16.14.0",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
+    "sass-loader": "^10.1.0",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
     "styled-components": "^5.2.0",
