--- a/packages/status.optimism.io/package.json
+++ b/packages/status.optimism.io/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "eslint-plugin-jest": "^24.3.3",
     "framer-motion": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,8 +25,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^24.3.3"
   }
 }
