Gateway: adds handleClaimClick

--- a/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.yaml
+++ b/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: OVM_CrossDomainMessenger
-    network: optimism
+    network: optimism-kovan
     source:
       address: "0x4200000000000000000000000000000000000007"
       abi: OVM_CrossDomainMessenger
