--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -45,6 +45,7 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "luxon": "^1.26.0",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
@@ -61,6 +62,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.1.2",
+    "react-table": "^7.6.3",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "^10.1.0",
