Gateway: Reimplements the Graph (#17)
* Implements the subgraphs again

* Gateway: refactors fetchTransactions and adds gasLimit to handleWithdraw

* Removes redundancies in useWallet

* Gateway: regression bugs in pagination and loading states

* Gateway: fetching bugs fixed

--- a/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.TEMPLATE.yaml
+++ b/packages/ovm-subgraphs/optimism-l2-subgraph/subgraph.TEMPLATE.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: OVM_CrossDomainMessenger
     network: {{networkName}}
     source:
-      address: "{{contracts.ovmCrossDomainMessenger.address}}"
+      address: "{{contracts.l2Messenger.address}}"
       abi: OVM_CrossDomainMessenger
       startBlock: {{startBlock}}      
     mapping:
