--- a/packages/gateway.optimism.io/package.json
+++ b/packages/gateway.optimism.io/package.json
@@ -134,6 +134,7 @@
     ]
   },
   "devDependencies": {
+    "@simbathesailor/use-what-changed": "^2.0.0",
     "tslint-react": "^5.0.0"
   },
   "jest": {
