--- a/packages/ovm-subgraphs/optimism-l1-subgraph/subgraph.TEMPLATE.yaml
+++ b/packages/ovm-subgraphs/optimism-l1-subgraph/subgraph.TEMPLATE.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: OVM_CrossDomainMessenger
     network: {{networkName}}
     source:
-      address: "{{contracts.ovmCrossDomainMessenger.address}}"
+      address: "{{contracts.l1Messenger.address}}"
       abi: OVM_CrossDomainMessenger
       startBlock: {{startBlock}}
     mapping:
