--- a/packages/gateway.optimism.io/public/manifest.json
+++ b/packages/gateway.optimism.io/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Eth App",
-  "name": "Create Eth App Sample",
+  "short_name": "Optimism Gateway",
+  "name": "Optimism Gateway",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,6 +10,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#f01a37",
   "background_color": "#ffffff"
 }
