--- a/packages/gateway.optimism.io/package.json
+++ b/packages/gateway.optimism.io/package.json
@@ -26,6 +26,8 @@
     "@ethersproject/contracts": "^5.0.5",
     "@ethersproject/providers": "^5.0.12",
     "@metamask/detect-provider": "^1.2.0",
+    "@sentry/react": "^6.3.1",
+    "@sentry/tracing": "^6.3.1",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^6.16.0",
     "@testing-library/jest-dom": "^5.11.4",
