--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -8,6 +8,11 @@
     "@chakra-ui/react": "^1.0.1",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@eth-optimism/contracts": "^0.2.7",
+    "@eth-optimism/watcher": "^0.0.1-alpha.9",
+    "@ethersproject/contracts": "^5.1.1",
+    "@sentry/browser": "^6.3.1",
+    "@sentry/tracing": "^6.3.1",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -98,6 +103,7 @@
     ]
   },
   "devDependencies": {
+    "@sentry/webpack-plugin": "^1.15.1",
     "js-yaml-loader": "^1.2.2"
   },
   "jest": {
