--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -67,6 +67,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.1.2",
+    "react-syntax-highlighter": "^15.4.3",
     "react-table": "^7.6.3",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
