--- a/packages/optimism.io/package.json
+++ b/packages/optimism.io/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@optimism/common-ui": "*",
     "@babel/core": "7.9.0",
     "@chakra-ui/icons": "^1.0.1",
     "@chakra-ui/react": "^1.0.1",
